--- a/wilsand/gifit-land.html
+++ b/wilsand/gifit-land.html
@@ -13,6 +13,7 @@
     <!-- Loading Flat UI -->
     <link href="css/flat-ui.css" rel="stylesheet">
     <link href="css/demo.css" rel="stylesheet">
+    <link href="css/gifit.css" rel="stylesheet">
 
     <link rel="shortcut icon" href="images/favicon.ico">
 
@@ -24,8 +25,18 @@
   </head>
   <body>
     <div class="container">
-     
-
+      <div id="header" class="row">
+        <div id="logo" class="col-xs-2">
+          LOGO IS HERE
+        </div>
+        <div class="col-xs-10">
+          <div class="form-group">
+              <input type="text" value="" placeholder="Search" class="form-control" />
+          </div>  
+        </div>
+      </div>
+      <div class="row">
+      </div>
     </div> <!-- /container -->
 
     <footer>
@@ -48,5 +59,7 @@
     <script src="js/jquery.stacktable.js"></script>
     <script src="http://vjs.zencdn.net/4.3/video.js"></script>
     <script src="js/application.js"></script>
+
+    <script src="js/gitit-search.js"></script>
   </body>
 </html>
